--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
 </head>
 <body>
+     <h3 style="text-align: center;background-color: black;">Use Desktop Site For Better View</h3>
     <div id="nav">
         <h2><b><i>SAYANTAN  </b>CODEING*</i></h2>
         <h3>BIRTHDAY DATE:24/2/2009</h3>
